Fix some responsive layout issues

--- a/styles/base/_layout.scss
+++ b/styles/base/_layout.scss
@@ -16,6 +16,10 @@ h3 {
     font-size: 24px;
 }
 
+img {
+    height: 100%;
+}
+
 .svg-icon {
     width: 2em;
     fill: white;
@@ -115,13 +119,16 @@ section {
         padding: 0 1em;
 
         img {
-            width: 120px;
+            width: 25vw;
+            max-width: 120px;
         }
 
         button {
             background-color: $greybrown;
-            width: 232px;
-            height: 53px;
+            width: 100%;
+            margin-left: 2em;
+            max-width: 232px;
+            padding: 1em;
             text-align: center;
             border-radius: 50px;
             color: white;
@@ -159,12 +166,13 @@ section {
     }
 
     h2 {
-        margin: 3em 0 1em 0;
+        margin: 4em 0 1em 0;
     }
     .pitch-images {
         display: flex;
         justify-content: space-between;
         width: 100%;
+        height: fit-content;
         margin: 1em 0;
 
         img {
